--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.6",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.1.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
